# django-command-palette

./: .gitignore  MANIFEST.in  README.md  setup.cfg
palette/: admin.py  apps.py
palette/static/admin/: palette.css  palette.js
palette/templates/admin/: base.html
