[metadata]
name = django-command-palette
version = 2022.11.25
description = Django app to add Command Palette to your Django admin.
long_description = file: README.rst
url = https://rajasimon.io/django-command-palette/
author = Raja Simon
author_email = rajasimonio@gmail.com
license = MIT 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0
